Решение проблем с тестами